# sre-agent

./: .env.example  .gitignore  CLAUDE.md  CONVENTIONS.md  LICENSE  Makefile  PLAN.md  PROJECT_SPEC.md  README.md  docker-compose.test.yaml  pyproject.toml
config/: otel-collector-local.yaml  otel-collector.yaml  tetragon-policy.yaml
configs/: alert-rules.yml  alertmanager-test.yml  log-generator.sh  memory-leak-daemon.py  prometheus-test.yml  settings.yaml  ssh_allowlist.yaml
scripts/: export_wheels.sh  seed_ontology.py  simulate_tetragon.py
skills/: cert-renewal.md  patch-openssl.md
src/: config.py  database.py  logging_config.py
src/agent/: approval.py  brain.py
src/api/: main.py
src/correlator/: matcher.py  otlp_adapter.py  receiver.py
src/graph/: queries.py  store.py
src/models/: schemas.py
src/skills/: loader.py  resolver.py
src/sre_agent/: __init__.py  callbacks.py  cli.py  config.py  model.py
src/sre_agent/agents/: data_collector.py  elasticsearch.py  operator.py  orchestrator.py  phase_a_orchestrator.py  phase_b_orchestrator.py  prometheus.py  rca.py  solution.py  ssh.py
src/sre_agent/defaults/: settings.yaml
src/sre_agent/integrations/: knowledge_base.py  otel.py  webhook.py
src/sre_agent/mcp_servers/: apm_server.py  awx_server.py  elasticsearch_server.py  prometheus_server.py  servicenow_cmdb_server.py  ssh_diagnostic_server.py  ssh_server.py
src/sre_agent/pipeline/: analyzer.py  approval.py  delivery.py  intake.py  server.py
src/sre_agent/prompts/: data_collector.py  elasticsearch.py  operator.py  orchestrator.py  phase_a.py  phase_b.py  prometheus.py  rca.py  solution.py  ssh.py
src/sre_agent/runbooks/: _template.md
src/sre_agent/schemas/: rca_output.py
src/sre_agent/templates/: approval.html
src/sre_agent/tools/: __init__.py  runbook.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api_dashboard.py  test_graph_store.py  test_matcher.py  test_receiver.py  test_skill_loader.py
tests/unit/: test_analyzer.py  test_approval.py  test_callbacks.py  test_config.py  test_intake.py  test_runbook.py
tests/unit/mcp_servers/: test_elasticsearch.py  test_prometheus.py  test_ssh_diagnostic.py
