[project]
name = "sre-agent"
version = "0.1.0"
description = "SRE 운영 자동화 에이전트 — 폐쇄망 대응, SQLite + NetworkX"
requires-python = ">=3.12"

dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # AI
    "anthropic>=0.40",
    # Graph (in-memory)
    "networkx>=3.4",
    # Data
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    # Logging
    "structlog>=24.4",
]
# 주의: sqlite3는 Python 표준 라이브러리이므로 별도 설치 불필요

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
