[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sre-agent"
version = "0.1.0"
description = "SRE Multi-Agent System for automated Root Cause Analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "JDhyeok" }]
keywords = ["sre", "agent", "rca", "aiops", "observability", "incident-response"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "strands-agents[anthropic]",
    "strands-agents-tools",
    "mcp[cli]",
    "fastmcp",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml",
    "typer[all]",
    "rich",
]

[project.optional-dependencies]
ssh = ["paramiko"]
webhook = ["fastapi", "uvicorn", "jinja2"]
all = ["sre-agent[ssh,webhook]"]
dev = ["pytest", "pytest-asyncio", "ruff", "build", "twine"]

[project.urls]
Homepage = "https://github.com/JDhyeok/sre-agent"
Repository = "https://github.com/JDhyeok/sre-agent"
Issues = "https://github.com/JDhyeok/sre-agent/issues"

[project.scripts]
sre-agent = "sre_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sre_agent"]

[tool.hatch.build.targets.wheel.force-include]
"src/sre_agent/defaults/settings.yaml" = "sre_agent/defaults/settings.yaml"
"src/sre_agent/defaults/ssh_allowlist.yaml" = "sre_agent/defaults/ssh_allowlist.yaml"
"src/sre_agent/templates/approval.html" = "sre_agent/templates/approval.html"

[tool.hatch.build.targets.sdist]
include = ["src/sre_agent/**", "configs/**", "README.md", "LICENSE"]

[tool.ruff]
target-version = "py311"
line-length = 120
